# telegram-qt

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  options.pri  telegram-qt.pro  telegram-qt.sln  telegram-testing.pro
TelegramQt/: AbridgedLength.cpp  AbridgedLength.hpp  AccountApi.cpp  AccountApi.hpp  AccountApi_p.hpp  AccountStorage.cpp  AccountStorage.hpp  ApiUtils.cpp  ApiUtils.hpp  AppInformation.cpp  AppInformation.hpp  BaseTcpTransport.cpp  BaseTcpTransport.hpp  BaseTransport.cpp  BaseTransport.hpp  BigNumber.cpp  BigNumber.hpp  BigNumber_p.hpp  CAppInformation.cpp  CAppInformation.hpp  CClientTcpTransport.cpp  CClientTcpTransport.hpp  CMakeLists.txt  CRawStream.cpp  CRawStream.hpp  CTcpTransport.cpp  CTcpTransport.hpp  CTelegramAuthModule.cpp  CTelegramAuthModule.hpp  CTelegramConnection.cpp  CTelegramConnection.hpp  CTelegramCore.cpp  CTelegramCore.hpp  CTelegramDispatcher.cpp  CTelegramDispatcher.hpp  CTelegramMediaModule.cpp  CTelegramMediaModule.hpp  CTelegramModule.cpp  CTelegramModule.hpp  CTelegramStream.cpp  (+149 more)
TelegramQt/Crypto/: Aes.cpp  Aes.hpp  AesCtr.cpp  AesCtr.hpp
TelegramQt/MTProto/: CTelegramStreamExtraOperators.cpp  CTelegramStreamExtraOperators.hpp  MessageHeader.cpp  MessageHeader.hpp  Stream.cpp  Stream.hpp  StreamExtraOperators.cpp  StreamExtraOperators.hpp  Stream_p.hpp  TLFunctions.hpp  TLNumbers.hpp  TLRpcDebug.cpp  TLRpcDebug.hpp  TLTypes.cpp  TLTypes.hpp  TLTypesDebug.cpp  TLTypesDebug.hpp  TLValues.hpp
TelegramQt/Operations/: ClientAuthOperation.cpp  ClientAuthOperation.hpp  ClientAuthOperation_p.hpp  ClientHelpOperation.cpp  ClientHelpOperation.hpp  ClientMessagesOperation.cpp  ClientMessagesOperation.hpp  ClientMessagesOperation_p.hpp  ClientPingOperation.cpp  ClientPingOperation.hpp  ConnectionOperation.cpp  ConnectionOperation.hpp  FileOperation.cpp  FileOperation.hpp  FileOperation_p.hpp  PendingContactsOperation.cpp  PendingContactsOperation.hpp  PendingContactsOperation_p.hpp  PendingMessages.cpp  PendingMessages.hpp  PendingMessages_p.hpp  operations.pri
TelegramQt/RpcLayers/: ClientRpcAccountLayer.cpp  ClientRpcAccountLayer.hpp  ClientRpcAuthLayer.cpp  ClientRpcAuthLayer.hpp  ClientRpcBotsLayer.cpp  ClientRpcBotsLayer.hpp  ClientRpcChannelsLayer.cpp  ClientRpcChannelsLayer.hpp  ClientRpcContactsLayer.cpp  ClientRpcContactsLayer.hpp  ClientRpcHelpLayer.cpp  ClientRpcHelpLayer.hpp  ClientRpcLangpackLayer.cpp  ClientRpcLangpackLayer.hpp  ClientRpcMessagesLayer.cpp  ClientRpcMessagesLayer.hpp  ClientRpcPaymentsLayer.cpp  ClientRpcPaymentsLayer.hpp  ClientRpcPhoneLayer.cpp  ClientRpcPhoneLayer.hpp  ClientRpcPhotosLayer.cpp  ClientRpcPhotosLayer.hpp  ClientRpcStickersLayer.cpp  ClientRpcStickersLayer.hpp  ClientRpcUpdatesLayer.cpp  ClientRpcUpdatesLayer.hpp  ClientRpcUploadLayer.cpp  ClientRpcUploadLayer.hpp  ClientRpcUsersLayer.cpp  ClientRpcUsersLayer.hpp  layers.pri
TelegramQt/TelegramQt/: AccountApi  AccountStorage  AppInformation  AuthOperation  CTelegramCore  Client  ClientSettings  ConnectionApi  ConnectionError  ContactList  ContactsApi  DataStorage  Debug  DialogList  FileOperation  FilesApi  MessagesOperation  MessagingApi  Peer  PendingContactsOperation  PendingMessages  RsaKey  TelegramNamespace
TelegramQt/doc/: TelegramQt-index.qdoc  TelegramQt.qdoc
TelegramQt/generator/: main.cpp
TelegramQt/generator-ng/: CMakeLists.txt  GeneratorNG.cpp  GeneratorNG.hpp  generator-ng.pro  json  main.cpp
TelegramQt/tests/: CMakeLists.txt  tests.pri  tests.pro
clients/cli/: CMakeLists.txt  main.cpp
clients/qml-client/: CMakeLists.txt  DialogDelegate.qml  DialogView.qml  InlineHeader.qml  Login.qml  MainScreen.qml  MessageDelegate.qml  MessageEditor.qml  MessageListView.qml  MessageView.qml  PeerHeader.qml  main.cpp  (+6 more)
doc/: CMakeLists.txt  TelegramQt.qdocconf  TelegramQtDoc  doc.pri  doc.pro
generator/: CMakeLists.txt  Generator.cpp  Generator.hpp  generator.pro  generator.qbs  main.cpp  scheme-72.tl
server/: AccountOperationFactory.cpp  AccountOperationFactory.hpp  AuthOperationFactory.cpp  AuthOperationFactory.hpp  AuthService.cpp  AuthService.hpp  AuthorizationProvider.hpp  AuthorizationProviderPlugin.cpp  AuthorizationProviderPlugin.hpp  BotUser.cpp  BotUser.hpp  CMakeLists.txt  CServerTcpTransport.cpp  CServerTcpTransport.hpp  DataImporter.cpp  DataImporter.hpp  DcConfiguration.hpp  DefaultAuthorizationProvider.cpp  DefaultAuthorizationProvider.hpp  FederalizationApi.cpp  FederalizationApi.hpp  FederalizationPlugin.cpp  FederalizationPlugin.hpp  FunctionStreamOperators.cpp  FunctionStreamOperators.hpp  GroupChat.cpp  GroupChat.hpp  IMediaService.hpp  JsonDataImporter.cpp  JsonDataImporter.hpp  JsonUtils_p.hpp  LocalCluster.cpp  LocalCluster.hpp  LocalServerApi.hpp  MediaService.cpp  MediaService.hpp  MessageService.cpp  MessageService.hpp  PendingVariant.cpp  PendingVariant.hpp  (+50 more)
telegram-qt/: CAppInformation.cpp  CAppInformation.hpp  CMakeLists.txt  CRawStream.cpp  CRawStream.hpp  CTcpTransport.cpp  CTcpTransport.hpp  CTelegramConnection.cpp  CTelegramConnection.hpp  CTelegramCore.cpp  CTelegramCore.hpp  CTelegramDispatcher.cpp  CTelegramDispatcher.hpp  CTelegramStream.cpp  CTelegramStream.hpp  CTelegramTransport.hpp  SDcInfo.hpp  TLNumbers.hpp  TLTypes.hpp  TLTypesDebug.cpp  TLTypesDebug.hpp  TLValues.cpp  TLValues.h  TLValues.hpp  TelegramNamespace.cpp  TelegramNamespace.hpp  TelegramNamespace_p.hpp  TelegramQt.vcxproj  TelegramQt.vcxproj.filters  TelegramQtConfig.cmake.in  TelegramUtils.cpp  TelegramUtils.hpp  Utils.cpp  Utils.hpp  crypto-aes.hpp  crypto-rsa.hpp  packages.config  telegram-qt.pro  telegramqt_export.h
testApp/: CChatInfoModel.cpp  CChatInfoModel.hpp  CContactModel.cpp  CContactModel.hpp  CContactsFilterModel.cpp  CContactsFilterModel.hpp  CDialogModel.cpp  CDialogModel.hpp  CFileManager.cpp  CFileManager.hpp  CMakeLists.txt  CMessageModel.cpp  CMessageModel.hpp  CMessagingModel.cpp  CMessagingModel.hpp  CPeerModel.cpp  CPeerModel.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  USAGE  main.cpp  testApp.pro  testApp.vcxproj  testApp.vcxproj.filters
tests/: CMakeLists.txt  tests.pri  tests.pro
(+268 files in other folders)
